--- a/client/register.html
+++ b/client/register.html
@@ -20,6 +20,17 @@
       --error-color: #dc3545;
     }
 
+    /* Dark mode variables */
+    body.dark-mode {
+      --light-bg: #1a1a1a;
+      --text-dark: #e0e0e0;
+      --text-light: #ffffff;
+      --border-color: #404040;
+      --shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      --success-color: #32d74b;
+      --error-color: #ff453a;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -30,6 +41,12 @@
       align-items: center;
       min-height: 100vh;
       position: relative;
+      transition: all 0.3s ease;
+    }
+
+    /* Dark mode background */
+    body.dark-mode {
+      background: linear-gradient(135deg, #0f0f0f 0%, #1a1a2e 100%);
     }
 
     /* Background Animation */
@@ -44,6 +61,11 @@
       animation: float 30s infinite linear;
       pointer-events: none;
       z-index: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    body.dark-mode::before {
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.03)"/></svg>') repeat;
     }
 
     @keyframes float {
@@ -62,6 +84,11 @@
       z-index: 1;
       border: 2px solid transparent;
       background-clip: padding-box;
+      transition: all 0.3s ease;
+    }
+
+    body.dark-mode .register-container {
+      border: 1px solid #404040;
     }
 
     .register-container::before {
@@ -91,6 +118,10 @@
       transition: transform 0.3s ease;
     }
 
+    body.dark-mode .form-logo {
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    }
+
     .form-logo:hover {
       transform: scale(1.05);
     }
@@ -103,12 +134,26 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       margin-bottom: 5px;
+      transition: all 0.3s ease;
+    }
+
+    /* Dark mode override for brand title */
+    body.dark-mode .brand-title {
+      background: linear-gradient(135deg, #5a9fd4 0%, #ff6b6b 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
 
     .brand-subtitle {
       color: #666;
       font-size: 0.75em;
       margin-bottom: 15px;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .brand-subtitle {
+      color: #888;
     }
 
     h1 {
@@ -118,6 +163,11 @@
       font-size: 1.6em;
       font-weight: 700;
       position: relative;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode h1 {
+      color: #5a9fd4;
     }
 
     h1::after {
@@ -133,7 +183,7 @@
     }
 
     .form-group {
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       position: relative;
     }
 
@@ -143,6 +193,7 @@
       font-weight: 600;
       color: var(--text-dark);
       font-size: 1em;
+      transition: color 0.3s ease;
     }
 
     .input-wrapper {
@@ -160,6 +211,13 @@
       transition: all 0.3s ease;
       background: #fafafa;
       font-family: inherit;
+      color: var(--text-dark);
+    }
+
+    body.dark-mode input[type="text"],
+    body.dark-mode input[type="password"] {
+      background: #2a2a2a;
+      color: var(--text-dark);
     }
 
     input[type="text"]:focus,
@@ -169,6 +227,13 @@
       box-shadow: 0 0 0 4px rgba(23, 64, 139, 0.1);
       background: white;
       transform: translateY(-2px);
+    }
+
+    body.dark-mode input[type="text"]:focus,
+    body.dark-mode input[type="password"]:focus {
+      background: #1a1a1a;
+      border-color: #5a9fd4;
+      box-shadow: 0 0 0 4px rgba(90, 159, 212, 0.2);
     }
 
     input[type="text"]:valid,
@@ -187,9 +252,17 @@
       transition: all 0.3s ease;
     }
 
+    body.dark-mode .password-toggle {
+      color: #888;
+    }
+
     .password-toggle:hover {
       color: var(--primary-color);
       transform: translateY(-50%) scale(1.1);
+    }
+
+    body.dark-mode .password-toggle:hover {
+      color: #5a9fd4;
     }
 
     .password-requirements {
@@ -199,12 +272,22 @@
       border-radius: 8px;
       border: 1px solid var(--border-color);
       font-size: 0.9em;
+      transition: all 0.3s ease;
+    }
+
+    body.dark-mode .password-requirements {
+      background: #2a2a2a;
     }
 
     .password-requirements h4 {
       margin: 0 0 10px 0;
       color: var(--primary-color);
       font-size: 1em;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .password-requirements h4 {
+      color: #5a9fd4;
     }
 
     .requirement {
@@ -213,6 +296,11 @@
       gap: 8px;
       margin: 5px 0;
       color: #666;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .requirement {
+      color: #888;
     }
 
     .requirement.valid {
@@ -238,12 +326,16 @@
       text-transform: uppercase;
       letter-spacing: 1px;
       box-shadow: var(--shadow);
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
 
     .register-button:hover:not(:disabled) {
       transform: translateY(-3px);
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    body.dark-mode .register-button:hover:not(:disabled) {
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
     }
 
     .register-button:active {
@@ -254,6 +346,10 @@
       background: #ccc;
       cursor: not-allowed;
       transform: none;
+    }
+
+    body.dark-mode .register-button:disabled {
+      background: #555;
     }
 
     .register-button.processing {
@@ -281,16 +377,26 @@
 
     .switch-link {
       text-align: center;
-      margin-top: 25px;
+      margin-bottom: 20px;
       font-size: 15px;
-      padding: 20px;
+      padding: 15px;
       background: #f8f9fa;
       border-radius: 12px;
       border: 1px solid var(--border-color);
+      transition: all 0.3s ease;
+    }
+
+    body.dark-mode .switch-link {
+      background: #2a2a2a;
     }
 
     .switch-link span {
       color: #666;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .switch-link span {
+      color: #888;
     }
 
     .switch-link a {
@@ -300,9 +406,57 @@
       transition: all 0.3s ease;
     }
 
+    body.dark-mode .switch-link a {
+      color: #5a9fd4;
+    }
+
     .switch-link a:hover {
       color: var(--secondary-color);
       text-decoration: underline;
+    }
+
+    /* Welcome Benefits */
+    .welcome-benefits {
+      margin-bottom: 20px;
+      padding: 20px;
+      background: linear-gradient(135deg, rgba(23,64,139,0.05) 0%, rgba(201,8,42,0.05) 100%);
+      border-radius: 12px;
+      border: 1px solid var(--border-color);
+      transition: all 0.3s ease;
+    }
+
+    body.dark-mode .welcome-benefits {
+      background: linear-gradient(135deg, rgba(90,159,212,0.1) 0%, rgba(255,69,58,0.1) 100%);
+    }
+
+    .welcome-benefits h4 {
+      margin: 0 0 15px 0;
+      color: var(--primary-color);
+      font-size: 1.1em;
+      text-align: center;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .welcome-benefits h4 {
+      color: #5a9fd4;
+    }
+
+    .benefit {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin: 8px 0;
+      font-size: 0.9em;
+      color: #666;
+      transition: color 0.3s ease;
+    }
+
+    body.dark-mode .benefit {
+      color: #888;
+    }
+
+    .benefit .icon {
+      font-size: 1.1em;
     }
 
     /* Result Messages */
@@ -314,6 +468,7 @@
       font-weight: 500;
       animation: slideIn 0.3s ease;
       display: none;
+      transition: all 0.3s ease;
     }
 
     @keyframes slideIn {
@@ -328,6 +483,12 @@
       display: block;
     }
 
+    body.dark-mode #result.success {
+      background: rgba(50, 215, 75, 0.2);
+      color: #32d74b;
+      border: 1px solid rgba(50, 215, 75, 0.3);
+    }
+
     #result.error {
       background: #f8d7da;
       color: #721c24;
@@ -335,53 +496,30 @@
       display: block;
     }
 
-    /* Welcome Benefits */
-    .welcome-benefits {
-      margin-top: 20px;
-      padding: 20px;
-      background: linear-gradient(135deg, rgba(23,64,139,0.05) 0%, rgba(201,8,42,0.05) 100%);
-      border-radius: 12px;
-      border: 1px solid var(--border-color);
-    }
-
-    .welcome-benefits h4 {
-      margin: 0 0 15px 0;
-      color: var(--primary-color);
-      font-size: 1.1em;
-      text-align: center;
-    }
-
-    .benefit {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin: 8px 0;
-      font-size: 0.9em;
-      color: #666;
-    }
-
-    .benefit .icon {
-      font-size: 1.1em;
+    body.dark-mode #result.error {
+      background: rgba(255, 69, 58, 0.2);
+      color: #ff453a;
+      border: 1px solid rgba(255, 69, 58, 0.3);
     }
 
     /* Responsive */
     @media (max-width: 768px) {
       .register-container {
-        padding: 30px 25px;
+        padding: 25px 20px;
         margin: 10px;
       }
 
       .form-logo {
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
       }
 
       .brand-title {
-        font-size: 1.5em;
+        font-size: 1.3em;
       }
 
       h1 {
-        font-size: 1.8em;
+        font-size: 1.5em;
       }
     }
   </style>
