--- a/client/admin.html
+++ b/client/admin.html
@@ -482,6 +482,30 @@
       });
     }
 
+    async function loadProducts() {
+  const res = await fetch('/admin-products');
+  const products = await res.json();
+
+  productList.innerHTML = '';
+  products.forEach(p => {
+    const li = document.createElement('li');
+    li.innerHTML = `
+      <div>
+        <strong>${p.name}</strong> - <span class="price">$${p.price.toFixed(2)}</span>
+      </div>
+      <div style="display: flex; gap: 10px;">
+        <button onclick="removeProduct('${p.id}')" style="background: #dc3545;">
+          🗑 Remove (POST)
+        </button>
+        <button onclick="removeProductWithDelete('${p.id}')" style="background: #e74c3c;">
+          🗑 Delete (DELETE)
+        </button>
+      </div>
+    `;
+    productList.appendChild(li);
+  });
+}
+
     async function removeProduct(id) {
       if (!confirm('Are you sure you want to delete this product?')) return;
 
@@ -498,6 +522,29 @@
         alert('Error: ' + await res.text());
       }
     }
+
+    // 🗑️ מחיקת מוצר עם DELETE method
+async function removeProductWithDelete(id) {
+  if (!confirm('Are you sure you want to delete this product? (Using DELETE method)')) return;
+
+  try {
+    const res = await fetch(`/admin-products/${id}`, {
+      method: 'DELETE'
+    });
+
+    if (res.ok) {
+      const result = await res.json();
+      alert(`✅ Product "${result.deletedProduct.name}" deleted successfully using DELETE method!`);
+      loadProducts();
+    } else {
+      const error = await res.json();
+      alert('❌ Error: ' + error.error);
+    }
+  } catch (error) {
+    console.error('Error deleting product:', error);
+    alert('❌ Error deleting product');
+  }
+}
   </script>
 </body>
 </html>
