--- a/client/profile.html
+++ b/client/profile.html
@@ -82,35 +82,60 @@
       border-bottom: 3px solid var(--accent-color);
     }
 
-    .form-group {
-      margin-bottom: 25px;
+    .profile-display {
+      background: #f8f9fa;
+      padding: 25px;
+      border-radius: 15px;
+      border-left: 4px solid var(--primary-color);
     }
 
-    .form-group label {
+    .info-group {
+      margin-bottom: 20px;
+      padding-bottom: 15px;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .info-group:last-child {
+      border-bottom: none;
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+
+    .info-group label {
       display: block;
       font-weight: 600;
-      color: var(--text-dark);
+      color: var(--primary-color);
       margin-bottom: 8px;
-      font-size: 1.1em;
-    }
-
-    .form-group input {
-      width: 100%;
-      padding: 15px;
-      border: 2px solid var(--border-color);
-      border-radius: 10px;
       font-size: 1em;
-      transition: all 0.3s ease;
-      box-sizing: border-box;
-      background: #fafafa;
     }
 
-    .form-group input:focus {
-      outline: none;
-      border-color: var(--primary-color);
-      box-shadow: 0 0 0 3px rgba(23, 64, 139, 0.1);
+    .info-value {
+      font-size: 1.1em;
+      color: var(--text-dark);
+      padding: 12px 16px;
       background: white;
-      transform: translateY(-1px);
+      border-radius: 8px;
+      border: 2px solid var(--border-color);
+      min-height: 20px;
+    }
+
+    /* Dark mode for profile display */
+    body.dark-mode .profile-display {
+      background: #2a2a2a !important;
+    }
+
+    body.dark-mode .info-group {
+      border-bottom-color: #444 !important;
+    }
+
+    body.dark-mode .info-group label {
+      color: #64b5f6 !important;
+    }
+
+    body.dark-mode .info-value {
+      background: #1a1a1a !important;
+      color: #f0f0f0 !important;
+      border-color: #555 !important;
     }
 
     .btn {
@@ -269,60 +294,40 @@
       </div>
 
       <div class="profile-sections">
-        <!-- Profile Information -->
+        <!-- Profile Information (View Only) -->
         <div class="profile-section">
           <div class="section-title">📝 Profile Information</div>
-          <form id="profileForm">
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" id="username" readonly>
+          <div class="profile-display">
+            <div class="info-group">
+              <label>Username</label>
+              <div class="info-value" id="displayUsername">Loading...</div>
             </div>
-            <div class="form-group">
-              <label for="email">Email Address</label>
-              <input type="email" id="email" placeholder="Enter your email">
+            <div class="info-group">
+              <label>Email Address</label>
+              <div class="info-value" id="displayEmail">Not provided</div>
             </div>
-            <div class="form-group">
-              <label for="fullName">Full Name</label>
-              <input type="text" id="fullName" placeholder="Enter your full name">
+            <div class="info-group">
+              <label>Full Name</label>
+              <div class="info-value" id="displayFullName">Not provided</div>
             </div>
-            <div class="form-group">
-              <label for="phone">Phone Number</label>
-              <input type="text" id="phone" placeholder="Enter your phone number">
+            <div class="info-group">
+              <label>Phone Number</label>
+              <div class="info-value" id="displayPhone">Not provided</div>
             </div>
-            <button type="submit" class="btn btn-primary">💾 Update Profile</button>
-          </form>
-        </div>
-
-        <!-- Change Password -->
-        <div class="profile-section">
-          <div class="section-title">🔒 Change Password</div>
-          <form id="passwordForm">
-            <div class="form-group">
-              <label for="currentPassword">Current Password</label>
-              <input type="password" id="currentPassword" placeholder="Enter current password" required>
+            <div class="info-group">
+              <label>Member Since</label>
+              <div class="info-value" id="displayMemberSince">2025</div>
             </div>
-            <div class="form-group">
-              <label for="newPassword">New Password</label>
-              <input type="password" id="newPassword" placeholder="Enter new password" required>
-            </div>
-            <div class="form-group">
-              <label for="confirmPassword">Confirm New Password</label>
-              <input type="password" id="confirmPassword" placeholder="Confirm new password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">🔑 Change Password</button>
-          </form>
+          </div>
         </div>
 
         <!-- Account Actions -->
         <div class="profile-section">
           <div class="section-title">⚙️ Account Actions</div>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
-            <button class="btn btn-secondary" onclick="exportData()">📊 Export My Data</button>
-            <button class="btn btn-secondary" onclick="clearCache()">🗑️ Clear Cache</button>
             <button class="btn btn-secondary" onclick="window.location.href='myitems.html'">📦 View Orders</button>
             <button class="btn btn-secondary" onclick="window.location.href='wishlist.html'">💖 My Wishlist</button>
             <button class="btn btn-secondary" onclick="window.location.href='cart.html'">🛒 My Cart</button>
-            <button class="btn btn-secondary" onclick="window.location.href='reviews.html'">⭐ My Reviews</button>
           </div>
         </div>
       </div>
@@ -357,10 +362,11 @@
     }
 
     function populateProfile(profile) {
-      document.getElementById('username').value = profile.username || '';
-      document.getElementById('email').value = profile.email || '';
-      document.getElementById('fullName').value = profile.fullName || '';
-      document.getElementById('phone').value = profile.phone || '';
+      document.getElementById('displayUsername').textContent = profile.username || 'Not provided';
+      document.getElementById('displayEmail').textContent = profile.email || 'Not provided';
+      document.getElementById('displayFullName').textContent = profile.fullName || 'Not provided';
+      document.getElementById('displayPhone').textContent = profile.phone || 'Not provided';
+      document.getElementById('displayMemberSince').textContent = profile.memberSince || '2025';
     }
 
     function updateStats(profile) {
@@ -375,100 +381,6 @@
       setTimeout(() => {
         messagesDiv.innerHTML = '';
       }, 5000);
-    }
-
-    // Profile form submission
-    document.getElementById('profileForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      
-      const profileData = {
-        email: document.getElementById('email').value,
-        fullName: document.getElementById('fullName').value,
-        phone: document.getElementById('phone').value
-      };
-
-      try {
-        const response = await fetch('/profile', {
-          method: 'PUT',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(profileData)
-        });
-
-        if (response.ok) {
-          showMessage('Profile updated successfully!', 'success');
-          loadProfile(); // Reload profile
-        } else {
-          const error = await response.text();
-          showMessage(error, 'error');
-        }
-      } catch (error) {
-        console.error('Error updating profile:', error);
-        showMessage('Failed to update profile', 'error');
-      }
-    });
-
-    // Password form submission
-    document.getElementById('passwordForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      
-      const currentPassword = document.getElementById('currentPassword').value;
-      const newPassword = document.getElementById('newPassword').value;
-      const confirmPassword = document.getElementById('confirmPassword').value;
-
-      if (newPassword !== confirmPassword) {
-        showMessage('New passwords do not match', 'error');
-        return;
-      }
-
-      if (newPassword.length < 6) {
-        showMessage('Password must be at least 6 characters long', 'error');
-        return;
-      }
-
-      try {
-        const response = await fetch('/change-password', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ currentPassword, newPassword })
-        });
-
-        if (response.ok) {
-          showMessage('Password changed successfully!', 'success');
-          document.getElementById('passwordForm').reset();
-        } else {
-          const error = await response.text();
-          showMessage(error, 'error');
-        }
-      } catch (error) {
-        console.error('Error changing password:', error);
-        showMessage('Failed to change password', 'error');
-      }
-    });
-
-    // Additional functions
-    async function exportData() {
-      try {
-        const response = await fetch('/export-data');
-        if (response.ok) {
-          const data = await response.json();
-          const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-          const url = URL.createObjectURL(blob);
-          const a = document.createElement('a');
-          a.href = url;
-          a.download = `${userProfile.username}_data.json`;
-          a.click();
-          URL.revokeObjectURL(url);
-          showMessage('Data exported successfully!', 'success');
-        }
-      } catch (error) {
-        showMessage('Failed to export data', 'error');
-      }
-    }
-
-    function clearCache() {
-      localStorage.clear();
-      sessionStorage.clear();
-      showMessage('Cache cleared successfully!', 'success');
     }
 
     // Initialize profile when page loads
