--- a/client/wishlist.html
+++ b/client/wishlist.html
@@ -301,7 +301,6 @@
       </div>
       <div class="action-buttons">
         <button class="btn btn-primary" onclick="addAllToCart()">🛒 Add All to Cart</button>
-        <button class="btn btn-secondary" onclick="shareWishlist()">📤 Share Wishlist</button>
         <button class="btn btn-danger" onclick="clearWishlist()">🗑️ Clear All</button>
       </div>
     </div>
@@ -410,11 +409,13 @@
         });
 
         if (response.ok) {
-          showMessage('Item added to cart!', 'success');
+          showMessage('Item added to cart and removed from wishlist!', 'success');
           // Update cart count in navbar
           if (window.updateCartCount) {
             window.updateCartCount();
           }
+          // Reload wishlist to show updated state
+          loadWishlist();
         } else {
           const error = await response.text();
           showMessage(error, 'error');
@@ -441,11 +442,13 @@
 
         if (response.ok) {
           const result = await response.json();
-          showMessage(`Added ${result.addedCount} items to cart!`, 'success');
+          showMessage(`Added ${result.addedCount} items to cart and cleared wishlist!`, 'success');
           // Update cart count in navbar
           if (window.updateCartCount) {
             window.updateCartCount();
           }
+          // Reload wishlist to show empty state
+          loadWishlist();
         } else {
           const error = await response.text();
           showMessage(error, 'error');
@@ -482,29 +485,7 @@
       }
     }
 
-    function shareWishlist() {
-      if (wishlistItems.length === 0) {
-        showMessage('No items to share', 'error');
-        return;
-      }
 
-      const shareText = `Check out my NBA Jersey wishlist:\n${wishlistItems.map(item => `• ${item.name} - ${item.price}`).join('\n')}`;
-      
-      if (navigator.share) {
-        navigator.share({
-          title: 'My NBA Jersey Wishlist',
-          text: shareText,
-          url: window.location.href
-        });
-      } else {
-        // Fallback - copy to clipboard
-        navigator.clipboard.writeText(shareText).then(() => {
-          showMessage('Wishlist copied to clipboard!', 'success');
-        }).catch(() => {
-          showMessage('Failed to copy wishlist', 'error');
-        });
-      }
-    }
 
     async function removeFromWishlist(productId) {
       if (!confirm('Remove this item from your wishlist?')) return;
