fixed my items style

--- a/client/myitems.html
+++ b/client/myitems.html
@@ -204,6 +204,10 @@
       font-size: 1.1em;
     }
 
+    .purchase-summary {
+      color: #666;
+    }
+
     .back-btn {
       display: block;
       margin: 40px auto;
