pay text temporary fix

--- a/client/pay.html
+++ b/client/pay.html
@@ -195,6 +195,7 @@
       transition: all 0.3s ease;
       box-sizing: border-box;
       background: #fafafa;
+      color: black;
     }
 
     .form-group input:focus {
