--- a/client/README.html
+++ b/client/README.html
@@ -203,7 +203,7 @@
     <!-- Additional Pages -->
     <div class="content-section">
       <div class="section-title">📄 Additional Pages Added</div>
-      <p>Beyond the required functionality, we added <strong>4+ additional pages</strong> with server communication:</p>
+      <p>Beyond the required functionality, we added <strong>additional pages</strong> with server communication:</p>
       
       <div class="feature-grid">
         <div class="feature-card">
@@ -491,7 +491,7 @@
 
     <!-- Testing Documentation -->
     <div class="content-section">
-      <div class="section-title">🧪 How We Tested It</div>
+      <div class="section-title">🧪 How I Tested It</div>
       
       <div class="feature-card">
         <h4>1. Automated Testing (test.js)</h4>
