added checkout comments

--- a/client/cart.html
+++ b/client/cart.html
@@ -434,7 +434,7 @@
     </div>
   </div>
 
-  <script src="navbar.js"></script> <!-- Include the navbar script -->
+  <script src="navbar.js"></script>
 
   <script>
     async function loadCart() { // Load the cart contents
@@ -612,7 +612,7 @@
         alert('Error removing item from cart');
       }
     }
-    
+
     // Initialize cart when page loads
     document.addEventListener('DOMContentLoaded', loadCart);
   </script>
