--- a/client/admin.html
+++ b/client/admin.html
@@ -676,7 +676,7 @@
     </div>
   </div>
 
-  <script src="navbar.js"></script> <!-- Navbar Script -->
+  <script src="navbar.js"></script>
   <script>
     // Admin Activity
     const prefixInput = document.getElementById('prefixInput');
