--- a/client/login.html
+++ b/client/login.html
@@ -536,10 +536,12 @@
   <script src="navbar.js"></script>
 
   <script>
+    // Initialize form elements
     const form = document.getElementById('loginForm');
     const loginBtn = document.getElementById('loginBtn');
     const resultEl = document.getElementById('result');
 
+    // Handle form submission
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
@@ -555,18 +557,21 @@
         loginBtn.className = 'login-button processing';
         loginBtn.innerHTML = '🔄 Logging in...';
 
+        // Gather form data
         const data = {
           username: form.username.value.trim(),
           password: form.password.value,
           remember: form.remember.checked
         };
 
+        // Send login request
         const res = await fetch('/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
 
+        // Check for authentication
         const text = await res.text();
 
         if (res.ok) {
@@ -578,7 +583,8 @@
           resultEl.textContent = 'Login successful! Redirecting to store...';
           resultEl.className = 'success';
           resultEl.style.display = 'block';
-          
+
+          // Redirect to store after a short delay
           setTimeout(() => {
             window.location.href = 'store.html';
           }, 1500);
@@ -613,7 +619,7 @@
       this.textContent = type === 'password' ? '👁' : '🙈';
     });
 
-    // Input validation feedback
+    // Input validation feedback - show border color change
     document.querySelectorAll('input[required]').forEach(input => {
       input.addEventListener('blur', function() {
         if (this.value.trim()) {
@@ -623,6 +629,7 @@
         }
       });
 
+      // Reset border color on input - if user starts typing again
       input.addEventListener('input', function() {
         if (this.style.borderColor === '#dc3545') {
           this.style.borderColor = '#e0e0e0';
