--- a/client/myitems.html
+++ b/client/myitems.html
@@ -374,21 +374,26 @@
   <script src="navbar.js"></script>
 
   <script>
+    // Initialize form elements
     window.onload = async () => {
       try {
         const res = await fetch('/my-items');
 
+        // Check if user is authenticated
         if (res.status === 401) {
           alert('You must be logged in.');
           window.location.href = 'login.html';
           return;
         }
 
+        // Check if response is okay
         if (!res.ok) throw new Error('Failed to load your purchases');
 
+        // Parse JSON response
         const items = await res.json();
         const container = document.getElementById('items-container');
 
+        // Check if there are no items
         if (items.length === 0) {
           container.innerHTML = `
             <div class="empty-state">
@@ -403,28 +408,31 @@
           return;
         }
 
+        // Validate and display each item
         items.forEach(item => {
           if (!item || !item.price || !item.name || !item.description) {
             console.warn("Incomplete item data:", item);
             return;
           }
 
+          // Calculate total spent
           const totalSpent = (item.price * item.quantity).toFixed(2);
-          
-          // יצירת רשימת תאריכי רכישה
+
+          // Create purchase dates list
           let purchaseDatesHtml = '';
           if (item.purchaseDates && item.purchaseDates.length > 0) {
             purchaseDatesHtml = item.purchaseDates.map((date, index) => {
-              const isLatest = index === 0; // התאריך הראשון במערך הוא האחרון (ממוין)
+              const isLatest = index === 0; // the first date in the array is the latest (sorted)
               const formattedDate = new Date(date).toLocaleString();
               return `<div class="purchase-date ${isLatest ? 'latest' : ''}">${formattedDate} ${isLatest ? '(Latest)' : ''}</div>`;
             }).join('');
           } else {
-            // fallback אם אין מערך תאריכים
+            // fallback if no dates array
             const formattedDate = item.purchasedAt ? new Date(item.purchasedAt).toLocaleString() : 'Unknown date';
             purchaseDatesHtml = `<div class="purchase-date latest">${formattedDate}</div>`;
           }
 
+          // Create item box
           const div = document.createElement('div');
           div.className = 'item-box';
           div.innerHTML = `
@@ -450,6 +458,7 @@
               </div>
             </div>
           `;
+          // Append item box to container
           container.appendChild(div);
         });
       } catch (err) {
