--- a/client/thankyou.html
+++ b/client/thankyou.html
@@ -271,6 +271,7 @@
   <script src="navbar.js"></script>
 
   <script>
+    // Go to store page
     function goHome() {
       window.location.href = "store.html";
     }
