fixed testing, added comments, add error catching, input validation

--- a/client/store.html
+++ b/client/store.html
@@ -815,7 +815,7 @@
           z-index: 1000;
           font-weight: 600;
         `;
-        successMessage.textContent = '✅ Added to cart! (Removed from wishlist if present)';
+        successMessage.textContent = '✅ Added to cart!';
         document.body.appendChild(successMessage);
         
         // Remove message after 3 seconds
