--- a/client/admin.html
+++ b/client/admin.html
@@ -893,9 +893,9 @@
             <strong>${p.name}</strong> - <span class="price">$${p.price.toFixed(2)}</span>
           </div>
           <div style="display: flex; gap: 10px;">
-            <button onclick="removeProduct('${p.id}')" style="background: #dc3545;">
+            <!-- <button onclick="removeProduct('${p.id}')" style="background: #dc3545;">
               🗑 Remove (POST)
-            </button>
+            </button> -->
             <button onclick="removeProductWithDelete('${p.id}')" style="background: #e74c3c;">
               🗑 Delete (DELETE)
             </button>
@@ -905,7 +905,7 @@
       });
     }
 
-    // Remove Product - run when the user clicks the remove button
+    // Remove Product - run when the user clicks the remove button - note: this uses POST method, replaced by DELETE method below
     async function removeProduct(id) {
       if (!confirm('Are you sure you want to delete this product?')) return;
 
