--- a/client/README.html
+++ b/client/README.html
@@ -166,6 +166,20 @@
     body.dark-mode.with-nav {
       background: linear-gradient(135deg, #121212 0%, #1a1a2e 100%) !important;
     }
+
+    body.dark-mode .challenge-item {
+      background: #2a2a2a !important;
+      border: 1px solid #444 !important;
+      color: #f0f0f0 !important;
+    }
+
+    body.dark-mode .challenge-item h4 {
+      color: #ffc107 !important;
+    }
+
+    body.dark-mode .challenge-item p {
+      color: #f0f0f0 !important;
+    }
   </style>
 </head>
 <body class="with-nav">
