updated comments on all files

--- a/client/store-react.html
+++ b/client/store-react.html
@@ -1,10 +1,11 @@
+<!-- client/store-react.html - React version of the store page with search and add to cart/wishlist functionality --- IGNORE --- Tried React for my experience -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Store (React)</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- טעינת React ו־ReactDOM -->
+  <!-- Loading React and ReactDOM -->
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -14,7 +15,7 @@
 
   <script src="navbar.js"></script>
 
-  <!-- רכיב React -->
+  <!-- React component -->
   <script type="text/babel">
 
     function Store() {
