--- a/client/store.html
+++ b/client/store.html
@@ -577,7 +577,12 @@
       const currentUser = document.cookie
         .split('; ')
         .find(row => row.startsWith('username='))
-        ?.split('=')[1];
+        ?.split('=')[1]
+        ? decodeURIComponent(document.cookie
+            .split('; ')
+            .find(row => row.startsWith('username='))
+            ?.split('=')[1])
+        : undefined;
 
         // Decode the username
       if (currentUser) {
